# hireloop-env

./: .gitignore  Dockerfile  README.md  __init__.py  api.py  client.py  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  run_mock.py  scenarios.json  session.py  validate.sh  web_interface.html
examples/: quickstart.py
hireloop/: __init__.py  env.py  session.py
hireloop/tasks/: __init__.py  communication.py  offer.py  resume.py
hireloop/utils/: email_scorer.py  skills.py
server/: Dockerfile  __init__.py  app.py  env.py
tasks/: __init__.py  communication.py  offer.py  resume.py
utils/: __init__.py  email_scorer.py  skills.py
